--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   shimmer: ^3.0.0
   quickalert: ^1.1.0
   extension: ^0.6.0
+  cached_network_image: ^3.3.1
 
 
 dev_dependencies: 
